Actions
Bug #16607
closedretried require does not raise Exception even if a library has SyntaxError
Bug #16607:
retried require does not raise Exception even if a library has SyntaxError
Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.7.0p0 (2019-12-25 revision 647ee6f091) [x86_64-linux]
Updated by nobu (Nobuyoshi Nakada) over 6 years ago
- Backport changed from 2.5: UNKNOWN, 2.6: UNKNOWN, 2.7: UNKNOWN to 2.5: DONTNEED, 2.6: DONTNEED, 2.7: REQUIRED
Updated by nobu (Nobuyoshi Nakada) over 6 years ago
- Status changed from Open to Closed
Applied in changeset git|7d6903dc476f982e7b432adbeef3a3d9372a309f.
Add the loaded feature after no exception raised
Retrying after rescued require should try to load the same
library again. [Bug #16607]
Updated by naruse (Yui NARUSE) over 6 years ago
- Backport changed from 2.5: DONTNEED, 2.6: DONTNEED, 2.7: REQUIRED to 2.5: DONTNEED, 2.6: DONTNEED, 2.7: DONE
ruby_2_7 c7e0ce67430b5e312eb626a2c2f4b6a810b3b68b.
Actions