Add the loaded feature after no exception raised

Retrying after rescued `require` should try to load the same
library again.  [Bug #16607]

(cherry picked from commit 7d6903dc476f982e7b432adbeef3a3d9372a309f)